--- a/meson.build
+++ b/meson.build
@@ -5,8 +5,14 @@ project('ssql',
 glib  = dependency('glib-2.0')
 gio   = dependency('gio-2.0')
 
+gnome  = import('gnome')
+
+test_enums = gnome.mkenums_simple(
+  'test-enum-types',
+  sources: ['test-enums.h'])
+
 executable('ssql',
-  sources: [ 'main.c' ],
+  sources: [ test_enums, 'main.c' ],
   dependencies: [
     glib, gio
   ])
